PROACTIVE-1117: Merge stdout and stderr to reduce thread usage
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/trunk@20532 28e8926c-6b08-0410-baaa-805c5e19b8d6